--- a/Views/Hisaab.ejs
+++ b/Views/Hisaab.ejs
@@ -13,7 +13,7 @@
         class="h-[60px] max-w-screen-md mx-auto px-6 flex items-center justify-between shadow-xl rounded-lg bg-white mt-6"
       >
         <!-- Date -->
-        <span class="text-xl font-medium text-gray-800">10-05-2024</span>
+        <span class="text-xl font-medium text-gray-800">KhataBook</span>
 
         <!-- Action Buttons and Links -->
         <div class="flex gap-6 items-center">
@@ -53,7 +53,7 @@
 
       <!-- Content Box -->
       <div
-        class="h-[300px] max-w-screen-md bg-white shadow-lg mx-auto mt-8 rounded-lg p-6"
+        class="h-[500px] max-w-screen-md bg-white shadow-lg mx-auto mt-8 rounded-lg p-6"
       >
         <div class="text-2xl font-semibold text-gray-700">Content Title</div>
         <p class="text-gray-600 mt-3">
