--- a/Views/Create.ejs
+++ b/Views/Create.ejs
@@ -43,7 +43,7 @@
 
         <!-- Content Input -->
         <div class="mt-6">
-          <label for="content" class="text-2xl font-semibold text-gray-700">Content</label>
+          <label for="content" class="text-2xl font-semibold text-gray-700">Hisaab</label>
           <textarea
             id="content"
             name="content"
