--- a/Views/Edit.ejs
+++ b/Views/Edit.ejs
@@ -32,7 +32,7 @@
         <div class="text-2xl font-semibold text-gray-700">Content Title</div>
         <!-- Content Input -->
         <div class="mt-6">
-          <label for="content" class="text-2xl font-semibold text-gray-700">Content</label>
+          <label for="content" class="text-2xl font-semibold text-gray-700">Hisaab</label>
           <textarea
             id="content"
             name="content"
