--- a/Views/Hisaab.ejs
+++ b/Views/Hisaab.ejs
@@ -18,7 +18,7 @@
         <!-- Action Buttons and Links -->
         <div class="flex gap-6 items-center">
           <!-- Edit Icon -->
-          <a href="#" class="transition-transform transform hover:scale-110">
+          <a href="/Edit" class="transition-transform transform hover:scale-110">
             <img
               src="/images/edit.png"
               alt="Edit"
@@ -27,7 +27,7 @@
           </a>
 
           <!-- Delete Icon -->
-          <a href="#" class="transition-transform transform hover:scale-110">
+          <a href="/Delete" class="transition-transform transform hover:scale-110">
             <img
               src="/images/delete.png"
               alt="Delete"
@@ -37,17 +37,17 @@
 
           <!-- Home Link -->
           <a
-            href="#"
+            href="/"
             class="text-lg font-medium text-gray-700 hover:text-gray-900 cursor-pointer hover:underline"
             >Home</a
           >
 
           <!-- Create Button -->
-          <span
+          <a href="/Create"
               class="px-6 py-2 bg-blue-700 hover:bg-blue-600 rounded-lg text-white text-sm font-semibold cursor-pointer shadow-md transform hover:scale-105 transition-transform duration-300"
             >
               Create Hisaab
-            </span>
+        </a>
         </div>
       </div>
 
