--- a/Views/index.ejs
+++ b/Views/index.ejs
@@ -11,7 +11,7 @@
       <!-- Navbar -->
       <div class="Navbar shadow-lg bg-gray-50">
         <div
-          class="flex items-center justify-between h-[70px] max-w-screen-xl mx-auto px-6"
+          class="flex items-center justify-between h-[70px] max-w-screen-lg mx-auto px-6"
         >
           <!-- Logo -->
           <span class="text-3xl font-mono font-bold text-gray-800">
@@ -21,24 +21,25 @@
           <!-- Navigation Links -->
           <div class="flex gap-8 items-center">
             <!-- Home Link -->
-            <span
-            class="text-lg font-medium text-gray-700 hover:text-gray-900 cursor-pointer hover:underline"
+            <a
+              href="/"
+              class="text-lg font-medium text-gray-700 hover:text-gray-900 cursor-pointer hover:underline"
             >
               Home
-            </span>
+            </a>
 
             <!-- Button -->
-            <span
+            <a href="/Create"
               class="px-6 py-2 bg-blue-700 hover:bg-blue-600 rounded-lg text-white text-sm font-semibold cursor-pointer shadow-md transform hover:scale-105 transition-transform duration-300"
             >
               Create Hisaab
-            </span>
+            </a>
           </div>
         </div>
       </div>
 
       <!-- All Hisaab Section -->
-      <div class="allHisaab max-w-screen-xl mx-auto px-6 mt-8">
+      <div class="allHisaab max-w-screen-lg mx-auto px-6 mt-8">
         <div
           class="Hisaab h-[60px] w-[25vw] bg-blue-700 flex items-center justify-between px-6 rounded-md shadow-xl"
         >
@@ -47,7 +48,7 @@
             <span class="text-white font-medium text-lg">10-05-2024</span>
 
             <!-- Image -->
-            <a href="#">
+            <a href="/Hisaab">
               <img
                 src="/images/file.png"
                 alt="file"
@@ -57,7 +58,7 @@
           </div>
           <div class="flex gap-6">
             <!-- Edit Icon -->
-            <a href="#" class="transition-transform transform hover:scale-110">
+            <a href="/Edit" class="transition-transform transform hover:scale-110">
               <img
                 src="/images/edit.png"
                 alt="Edit"
@@ -66,7 +67,7 @@
             </a>
 
             <!-- Delete Icon -->
-            <a href="#" class="transition-transform transform hover:scale-110">
+            <a href="/Delete" class="transition-transform transform hover:scale-110">
               <img
                 src="/images/delete.png"
                 alt="Delete"
