--- a/Views/Create.ejs
+++ b/Views/Create.ejs
@@ -16,21 +16,24 @@
         <span class="text-xl font-medium text-gray-800">KhataBook</span>
 
         <!-- Home Link -->
-        <button
+        <a href="/"
           class="px-6 py-2 bg-blue-700 hover:bg-blue-600 text-white rounded-lg shadow-md hover:scale-105 transition-all duration-300"
         >
           Home
-        </button>
+        </a>
       </div>
 
       <!-- Form Box (Content Box) -->
       <form
         class="h-[500px] max-w-screen-md bg-white shadow-lg mx-auto mt-8 rounded-lg p-6 relative"
-        action="/submit" method="POST" 
+        action="/Create"
+        method="POST"
       >
         <!-- Title Input -->
         <div>
-          <label for="title" class="text-2xl font-semibold text-gray-700">Title</label>
+          <label for="title" class="text-2xl font-semibold text-gray-700"
+            >Title</label
+          >
           <input
             id="title"
             type="text"
@@ -43,7 +46,9 @@
 
         <!-- Content Input -->
         <div class="mt-6">
-          <label for="content" class="text-2xl font-semibold text-gray-700">Hisaab</label>
+          <label for="content" class="text-2xl font-semibold text-gray-700"
+            >Hisaab</label
+          >
           <textarea
             id="content"
             name="content"
