--- a/Views/Edit.ejs
+++ b/Views/Edit.ejs
@@ -16,17 +16,17 @@
         <span class="text-xl font-medium text-gray-800">KhataBook</span>
 
         <!-- Home Link -->
-        <button
+        <a href="/"
           class="px-6 py-2 bg-blue-700 hover:bg-blue-600 text-white rounded-lg shadow-md hover:scale-105 transition-all duration-300"
         >
           Home
-        </button>
+    </a>
       </div>
 
       <!-- Form Box (Content Box) -->
       <form
         class="h-[500px] max-w-screen-md bg-white shadow-lg mx-auto mt-8 rounded-lg p-6 relative"
-        action="/submit" method="POST" 
+        action="/Edit" method="POST" 
       >
         <!-- Title Input -->
         <div class="text-2xl font-semibold text-gray-700">Content Title</div>
