--- a/Views/Create.ejs
+++ b/Views/Create.ejs
@@ -51,7 +51,7 @@
           >
           <textarea
             id="content"
-            name="content"
+            name="hisaab"
             rows="10"
             class="w-full mt-3 px-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500"
             placeholder="Enter your content here"
